2003-04-16  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/Makefile.in (install): rolling back Drew's change for
	HPUX, because it breaks the install for systems where autoconf
	detects and uses a binary install program.  We need to find
	another solution for HPUX.

2003-04-16    <drew@loki.sai-office>

	* pylibs/Makefile.in (install): on HPUX, for reasons that are
	totally opaque to me, install-sh does not work unless you run it
	as "sh $(INSTALL)...", but just here... !??!!?

	* SkunkWeb/SkunkWeb/Server.py: now deals ok when os does not
	have the seteuid or setegid functions

	* SkunkWeb/skunkweb.py.in (mods): now deals ok when os does not
	have the seteuid or setegid functions

	* SkunkWeb/Services/requestHandler/requestHandler.py (_processRequest) 
	(_sendResponse): fixes to ignore non-erroneous exceptions (i.e.
	those where the connection dies).

2003-04-11    <drew@loki.sai-office>

	* pylibs/SocketMan/SocketMan.py: now checks for EWOULDBLOCK on
	accept() error.

	* SkunkWeb/Makefile.in, SkunkWeb/Services/Makefile.in,
	pylibs/Makefile.in: portability fixes for PH/UX, er, HP/UX, er,
	really shitty Unix

2003-04-15  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/spreadcache_service.py: tiniest possible service
	for defining spreadcache aliases in skunkweb configuration.

	* pylibs/spreadcache.py: simple module for caching spread
	mailboxes.

2003-04-13  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/skunkweb.py.in, SkunkWeb/SkunkWeb/Server.py,
	SkunkWeb/SkunkWeb/bootloader.py.in,
	pylibs/ProcessMgr/ProcessMgr.py: modified patch by Frank Tegtmeyer
	to get the server to run without daemonizing, for monitoring with
	djb's daemontools.

2003-04-11  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{The \texttt{CONNECTION}
	Object}): typo fix, thanks to Frank Tegtmeyer.

	* pylibs/formlib/__init__.py: conditional import of aecomp
	submodule (will still work if AE isn't installed).
